# 2012-4-02

- Fixed timeline issues
- Finished HRSparkLine lib

# 2012-4-30

- Started custom sparkline library
- Updated user images
- Updated timeline code

# 2012-4-25

- Updated the default applets and their order for the Smith family
- Version bump to 0.4

# 2012-4-23

- Updated providers images

# 2012-4-20

- Added 1-finger swipe to user image
- Fixed view alignments
- Updated summary view images
- Changes doctors tab to providers
- Updated provider tiles
- Increased font size of vitals normals
- Updated patient image on all views

# 2012-4-19

- Implement new "people picker" view
- Implement name search on people picker view
- Transition "Summary" screen to new people picker view
- Add two-finger swipe left and right on the summary screen to go to previous / next patient respectively
- Show new tiles and associated full screen views on doctors tab

# 2012-4-18

- Fixed normal ranges on blood pressure applet
- Added diastolic values to BP popover table
- Normal range is now checked for systolic values
- Added normal ranges to BMI applet
- Removed old vital applets and added blood pressure and/or BMI to the patients
- Moved "upcoming events" to align with grid
- Setup doctors view to use new health gateway views
- Added placeholders on doctors view

# 2012-4-16

- Fixed 'ghost' messages
- Converted BMI to standalone applet
- Converted blood pressure to standalone applet (still needs to account for diastolic)
- Add "slid out" view for applets. In the future the patient picker will work the same way

# 2012-4-13

- Add ability to reorder installed applets
- Fix bugs with data display
- Update simulated applets

# 2012-4-13

- Added new applets provided by Dave
- Added allergies to synthetic data
- Medication refill now shows refill date
- Set grid vertical padding to allow showing 2 full rows of applets
- Set appropriate applets for each user
- Added wahoo applet
- Added nikeplus applet
- Added withings applet
- Added fitbit applet
- Added wakemate applet